src/jsonbean.js
/**
 * Generated by PEG.js 0.10.0.
 *
 * http://pegjs.org/
 */
(function () {
    function jsonBean(){
        "use strict";

        function peg$subclass(child, parent) {
            function ctor() { this.constructor = child; }
            ctor.prototype = parent.prototype;
            child.prototype = new ctor();
        }

        function peg$SyntaxError(message, expected, found, location) {
            this.message  = message;
            this.expected = expected;
            this.found    = found;
            this.location = location;
            this.name     = "SyntaxError";

            if (typeof Error.captureStackTrace === "function") {
                Error.captureStackTrace(this, peg$SyntaxError);
            }
        }

        peg$subclass(peg$SyntaxError, Error);

        peg$SyntaxError.buildMessage = function(expected, found) {
            var DESCRIBE_EXPECTATION_FNS = {
                literal: function(expectation) {
                    return "\"" + literalEscape(expectation.text) + "\"";
                },

                "class": function(expectation) {
                    var escapedParts = "",
                        i;

                    for (i = 0; i < expectation.parts.length; i++) {
                        escapedParts += expectation.parts[i] instanceof Array
                            ? classEscape(expectation.parts[i][0]) + "-" + classEscape(expectation.parts[i][1])
                            : classEscape(expectation.parts[i]);
                    }

                    return "[" + (expectation.inverted ? "^" : "") + escapedParts + "]";
                },

                any: function(expectation) {
                    return "any character";
                },

                end: function(expectation) {
                    return "end of input";
                },

                other: function(expectation) {
                    return expectation.description;
                }
            };

            function hex(ch) {
                return ch.charCodeAt(0).toString(16).toUpperCase();
            }

            function literalEscape(s) {
                return s
                    .replace(/\\/g, '\\\\')
                    .replace(/"/g,  '\\"')
                    .replace(/\0/g, '\\0')
                    .replace(/\t/g, '\\t')
                    .replace(/\n/g, '\\n')
                    .replace(/\r/g, '\\r')
                    .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
                    .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
            }

            function classEscape(s) {
                return s
                    .replace(/\\/g, '\\\\')
                    .replace(/\]/g, '\\]')
                    .replace(/\^/g, '\\^')
                    .replace(/-/g,  '\\-')
                    .replace(/\0/g, '\\0')
                    .replace(/\t/g, '\\t')
                    .replace(/\n/g, '\\n')
                    .replace(/\r/g, '\\r')
                    .replace(/[\x00-\x0F]/g,          function(ch) { return '\\x0' + hex(ch); })
                    .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return '\\x'  + hex(ch); });
            }

            function describeExpectation(expectation) {
                return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
            }

            function describeExpected(expected) {
                var descriptions = new Array(expected.length),
                    i, j;

                for (i = 0; i < expected.length; i++) {
                    descriptions[i] = describeExpectation(expected[i]);
                }

                descriptions.sort();

                if (descriptions.length > 0) {
                    for (i = 1, j = 1; i < descriptions.length; i++) {
                        if (descriptions[i - 1] !== descriptions[i]) {
                            descriptions[j] = descriptions[i];
                            j++;
                        }
                    }
                    descriptions.length = j;
                }

                switch (descriptions.length) {
                    case 1:
                        return descriptions[0];

                    case 2:
                        return descriptions[0] + " or " + descriptions[1];

                    default:
                        return descriptions.slice(0, -1).join(", ")
                            + ", or "
                            + descriptions[descriptions.length - 1];
                }
            }

            function describeFound(found) {
                return found ? "\"" + literalEscape(found) + "\"" : "end of input";
            }

            return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
        };

        function peg$parse(input, options) {
            options = options !== void 0 ? options : {};

            var peg$FAILED = {},

                peg$startRuleFunctions = { Start: peg$parseStart },
                peg$startRuleFunction  = peg$parseStart,

                peg$c0 = function(items) {
                    var result = {
                        name: '',
                        description: '',
                        attributes: []
                    }
                    items.forEach(function(item){
                        if (item === null) return;
                        if (item.class) {
                            result.name = item.class
                            result.description = item.description
                        } else if (item.name) {
                            result.attributes.push(item)
                        }
                    })
                    return result
                },
                peg$c1 = function() {
                    return "" // ignore
                },
                peg$c2 = ";",
                peg$c3 = peg$literalExpectation(";", false),
                peg$c4 = function(ct, f, dt, name, arr, dv, cl) {
                    if(f){
                        return null;
                    }
                    return {
                        name: name.join(''),
                        typeName: dt.name,
                        isArray: dt.isArray || (arr?true:false),
                        defaultValue: dv == null?"":dv,
                        description: ct.join('') || cl
                    }
                },
                peg$c5 = "public",
                peg$c6 = peg$literalExpectation("public", false),
                peg$c7 = "class",
                peg$c8 = peg$literalExpectation("class", false),
                peg$c9 = "{",
                peg$c10 = peg$literalExpectation("{", false),
                peg$c11 = function(ct, clazz) {
                    return {
                        description: ct.join(''),
                        class: clazz
                    }
                },
                peg$c12 = "}",
                peg$c13 = peg$literalExpectation("}", false),
                peg$c14 = function() {
                    return null
                },
                peg$c15 = function(a) {
                    return null
                },
                peg$c16 = "[",
                peg$c17 = peg$literalExpectation("[", false),
                peg$c18 = "]",
                peg$c19 = peg$literalExpectation("]", false),
                peg$c20 = function(i) {return true;},
                peg$c21 = "List",
                peg$c22 = peg$literalExpectation("List", false),
                peg$c23 = "<",
                peg$c24 = peg$literalExpectation("<", false),
                peg$c25 = ">",
                peg$c26 = peg$literalExpectation(">", false),
                peg$c27 = function(w) {
                    return {
                        name: w,
                        isArray: true
                    }
                },
                peg$c28 = function(w, arr) {
                    return {
                        name: w,
                        isArray: true
                    }
                },
                peg$c29 = function(w) {
                    return {
                        name: w,
                        isArray: false
                    }
                },
                peg$c30 = "@",
                peg$c31 = peg$literalExpectation("@", false),
                peg$c32 = "private",
                peg$c33 = peg$literalExpectation("private", false),
                peg$c34 = "protected",
                peg$c35 = peg$literalExpectation("protected", false),
                peg$c36 = "static",
                peg$c37 = peg$literalExpectation("static", false),
                peg$c38 = "final",
                peg$c39 = peg$literalExpectation("final", false),
                peg$c40 = "transient",
                peg$c41 = peg$literalExpectation("transient", false),
                peg$c42 = "volatile",
                peg$c43 = peg$literalExpectation("volatile", false),
                peg$c44 = function(s, f) {
                    /*
                      如果把一个member定义为final意味着无法改变，此时该member不应导入
                      而static则是类的，也不应该导入
                      如： 有些时候JavaBean会implements一些interface(如Seriablizable)，就需要定义一个static final long 的serialVersionUID，显然这个member是不应该被导入的
                    */
                    return f === "final" || s === 'static';
                },
                peg$c45 = "=",
                peg$c46 = peg$literalExpectation("=", false),
                peg$c47 = function(d) {
                    return d;

                },
                peg$c48 = ",",
                peg$c49 = peg$literalExpectation(",", false),
                peg$c50 = function(s, ss) {
                    var temp = ss.map(function(item){ return item[2];});
                    temp.unshift(s);
                    return {
                        notArray: true,
                        value:temp
                    };
                },
                peg$c51 = function(v, vv) {
                    // 支持一下几种:
                    // [1,2,3]
                    // [[1,2,3],[4,5,6]]
                    // ["test", "it",["a", "test]];  parser中对这种差异性不处理,不进行类型检查。
                    if(v.notArray){
                        return v.value;
                    }else{
                        var temp = new Array();
                        temp.push(v);
                        if(vv.length == 0){
                            return temp;
                        }else{
                            var vvTemp = vv.map(function(item){return item[2]});
                            return temp.concat(vvTemp);
                        }
                    }
                },
                peg$c52 = /^[^;]/,
                peg$c53 = peg$classExpectation([";"], true, false),
                peg$c54 = function() {
                    return "";
                },
                peg$c55 = "//",
                peg$c56 = peg$literalExpectation("//", false),
                peg$c57 = function(c) { // 因为都是包在一个java class 中, 所以一定有LB
                    return c.join('')
                },
                peg$c58 = function(c) {
                    return c
                },
                peg$c59 = /^[\/]/,
                peg$c60 = peg$classExpectation(["/"], false, false),
                peg$c61 = /^[*]/,
                peg$c62 = peg$classExpectation(["*"], false, false),
                peg$c63 = "*/",
                peg$c64 = peg$literalExpectation("*/", false),
                peg$c65 = peg$anyExpectation(),
                peg$c66 = function(c) {
                    var comments = c.map(function(item){
                        return item[1]
                    }).join('').split('\n')
                    var result = []
                    comments.forEach(function(comment){
                        var trimResult = comment.trim().replace(/^\*+|\*+$/g, '').trim()
                        if (trimResult) {
                            result.push(trimResult)
                        }
                    })
                    return result.join(', ')
                },
                peg$c67 = "\"",
                peg$c68 = peg$literalExpectation("\"", false),
                peg$c69 = /^[^"]/,
                peg$c70 = peg$classExpectation(["\""], true, false),
                peg$c71 = function(s) {
                    return s.join('');
                },
                peg$c72 = function(f) {
                    return f.map(function(i){ if(i instanceof Array) {return i.join('')} else return i}).join('');
                },
                peg$c73 = /^[0-9]/,
                peg$c74 = peg$classExpectation([["0", "9"]], false, false),
                peg$c75 = /^[eE]/,
                peg$c76 = peg$classExpectation(["e", "E"], false, false),
                peg$c77 = /^[+\-]/,
                peg$c78 = peg$classExpectation(["+", "-"], false, false),
                peg$c79 = function(e, s, ds) {
                    return e + (s==null? "" : s) + ds.join('');
                },
                peg$c80 = ".",
                peg$c81 = peg$literalExpectation(".", false),
                peg$c82 = function(s, d) {
                    return (s=='-' ? -1: 1) * Number(d.join(''));
                },
                peg$c83 = function(l) {
                    return l.join('');
                },
                peg$c84 = /^[a-zA-Z0-9]/,
                peg$c85 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"]], false, false),
                peg$c86 = peg$otherExpectation("Whitespace"),
                peg$c87 = /^[ \t]/,
                peg$c88 = peg$classExpectation([" ", "\t"], false, false),
                peg$c89 = peg$otherExpectation("Zero or more whitespaces"),
                peg$c90 = peg$otherExpectation("One or more whitespaces"),
                peg$c91 = /^[\r\n]/,
                peg$c92 = peg$classExpectation(["\r", "\n"], false, false),
                peg$c93 = /^[^;{]/,
                peg$c94 = peg$classExpectation([";", "{"], true, false),
                peg$c95 = /^[^\r\n]/,
                peg$c96 = peg$classExpectation(["\r", "\n"], true, false),

                peg$currPos          = 0,
                peg$savedPos         = 0,
                peg$posDetailsCache  = [{ line: 1, column: 1 }],
                peg$maxFailPos       = 0,
                peg$maxFailExpected  = [],
                peg$silentFails      = 0,

                peg$result;

            if ("startRule" in options) {
                if (!(options.startRule in peg$startRuleFunctions)) {
                    throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
                }

                peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
            }

            function text() {
                return input.substring(peg$savedPos, peg$currPos);
            }

            function location() {
                return peg$computeLocation(peg$savedPos, peg$currPos);
            }

            function expected(description, location) {
                location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

                throw peg$buildStructuredError(
                    [peg$otherExpectation(description)],
                    input.substring(peg$savedPos, peg$currPos),
                    location
                );
            }

            function error(message, location) {
                location = location !== void 0 ? location : peg$computeLocation(peg$savedPos, peg$currPos)

                throw peg$buildSimpleError(message, location);
            }

            function peg$literalExpectation(text, ignoreCase) {
                return { type: "literal", text: text, ignoreCase: ignoreCase };
            }

            function peg$classExpectation(parts, inverted, ignoreCase) {
                return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
            }

            function peg$anyExpectation() {
                return { type: "any" };
            }

            function peg$endExpectation() {
                return { type: "end" };
            }

            function peg$otherExpectation(description) {
                return { type: "other", description: description };
            }

            function peg$computePosDetails(pos) {
                var details = peg$posDetailsCache[pos], p;

                if (details) {
                    return details;
                } else {
                    p = pos - 1;
                    while (!peg$posDetailsCache[p]) {
                        p--;
                    }

                    details = peg$posDetailsCache[p];
                    details = {
                        line:   details.line,
                        column: details.column
                    };

                    while (p < pos) {
                        if (input.charCodeAt(p) === 10) {
                            details.line++;
                            details.column = 1;
                        } else {
                            details.column++;
                        }

                        p++;
                    }

                    peg$posDetailsCache[pos] = details;
                    return details;
                }
            }

            function peg$computeLocation(startPos, endPos) {
                var startPosDetails = peg$computePosDetails(startPos),
                    endPosDetails   = peg$computePosDetails(endPos);

                return {
                    start: {
                        offset: startPos,
                        line:   startPosDetails.line,
                        column: startPosDetails.column
                    },
                    end: {
                        offset: endPos,
                        line:   endPosDetails.line,
                        column: endPosDetails.column
                    }
                };
            }

            function peg$fail(expected) {
                if (peg$currPos < peg$maxFailPos) { return; }

                if (peg$currPos > peg$maxFailPos) {
                    peg$maxFailPos = peg$currPos;
                    peg$maxFailExpected = [];
                }

                peg$maxFailExpected.push(expected);
            }

            function peg$buildSimpleError(message, location) {
                return new peg$SyntaxError(message, null, null, location);
            }

            function peg$buildStructuredError(expected, found, location) {
                return new peg$SyntaxError(
                    peg$SyntaxError.buildMessage(expected, found),
                    expected,
                    found,
                    location
                );
            }

            function peg$parseStart() {
                var s0, s1, s2;

                s0 = peg$currPos;
                s1 = [];
                s2 = peg$parseStatement();
                if (s2 !== peg$FAILED) {
                    while (s2 !== peg$FAILED) {
                        s1.push(s2);
                        s2 = peg$parseStatement();
                    }
                } else {
                    s1 = peg$FAILED;
                }
                if (s1 !== peg$FAILED) {
                    peg$savedPos = s0;
                    s1 = peg$c0(s1);
                }
                s0 = s1;

                return s0;
            }

            function peg$parseCommentOrLB() {
                var s0, s1, s2;

                s0 = peg$parseComment();
                if (s0 === peg$FAILED) {
                    s0 = peg$currPos;
                    s1 = [];
                    s2 = peg$parseLB();
                    if (s2 !== peg$FAILED) {
                        while (s2 !== peg$FAILED) {
                            s1.push(s2);
                            s2 = peg$parseLB();
                        }
                    } else {
                        s1 = peg$FAILED;
                    }
                    if (s1 !== peg$FAILED) {
                        peg$savedPos = s0;
                        s1 = peg$c1();
                    }
                    s0 = s1;
                }

                return s0;
            }

            function peg$parseStatement() {
                var s0, s1, s2, s3, s4, s5, s6, s7, s8, s9, s10, s11, s12, s13, s14, s15, s16;

                s0 = peg$currPos;
                s1 = peg$parse_();
                if (s1 !== peg$FAILED) {
                    s2 = [];
                    s3 = peg$parseComment();
                    while (s3 !== peg$FAILED) {
                        s2.push(s3);
                        s3 = peg$parseComment();
                    }
                    if (s2 !== peg$FAILED) {
                        s3 = peg$parse_();
                        if (s3 !== peg$FAILED) {
                            s4 = peg$parseMarkerAnnotation();
                            if (s4 === peg$FAILED) {
                                s4 = null;
                            }
                            if (s4 !== peg$FAILED) {
                                s5 = peg$parse_();
                                if (s5 !== peg$FAILED) {
                                    s6 = peg$parseFieldModifiers();
                                    if (s6 !== peg$FAILED) {
                                        s7 = peg$parse__();
                                        if (s7 !== peg$FAILED) {
                                            s8 = peg$parseDataType();
                                            if (s8 !== peg$FAILED) {
                                                s9 = peg$parse__();
                                                if (s9 !== peg$FAILED) {
                                                    s10 = [];
                                                    s11 = peg$parseCharacter();
                                                    if (s11 !== peg$FAILED) {
                                                        while (s11 !== peg$FAILED) {
                                                            s10.push(s11);
                                                            s11 = peg$parseCharacter();
                                                        }
                                                    } else {
                                                        s10 = peg$FAILED;
                                                    }
                                                    if (s10 !== peg$FAILED) {
                                                        s11 = peg$parse_();
                                                        if (s11 !== peg$FAILED) {
                                                            s12 = peg$parseTraditionalArray();
                                                            if (s12 === peg$FAILED) {
                                                                s12 = null;
                                                            }
                                                            if (s12 !== peg$FAILED) {
                                                                s13 = peg$parseDefaultValueAssign();
                                                                if (s13 === peg$FAILED) {
                                                                    s13 = null;
                                                                }
                                                                if (s13 !== peg$FAILED) {
                                                                    if (input.charCodeAt(peg$currPos) === 59) {
                                                                        s14 = peg$c2;
                                                                        peg$currPos++;
                                                                    } else {
                                                                        s14 = peg$FAILED;
                                                                        if (peg$silentFails === 0) { peg$fail(peg$c3); }
                                                                    }
                                                                    if (s14 !== peg$FAILED) {
                                                                        s15 = peg$parse_();
                                                                        if (s15 !== peg$FAILED) {
                                                                            s16 = peg$parseCommentOrLB();
                                                                            if (s16 !== peg$FAILED) {
                                                                                peg$savedPos = s0;
                                                                                s1 = peg$c4(s2, s6, s8, s10, s12, s13, s16);
                                                                                s0 = s1;
                                                                            } else {
                                                                                peg$currPos = s0;
                                                                                s0 = peg$FAILED;
                                                                            }
                                                                        } else {
                                                                            peg$currPos = s0;
                                                                            s0 = peg$FAILED;
                                                                        }
                                                                    } else {
                                                                        peg$currPos = s0;
                                                                        s0 = peg$FAILED;
                                                                    }
                                                                } else {
                                                                    peg$currPos = s0;
                                                                    s0 = peg$FAILED;
                                                                }
                                                            } else {
                                                                peg$currPos = s0;
                                                                s0 = peg$FAILED;
                                                            }
                                                        } else {
                                                            peg$currPos = s0;
                                                            s0 = peg$FAILED;
                                                        }
                                                    } else {
                                                        peg$currPos = s0;
                                                        s0 = peg$FAILED;
                                                    }
                                                } else {
                                                    peg$currPos = s0;
                                                    s0 = peg$FAILED;
                                                }
                                            } else {
                                                peg$currPos = s0;
                                                s0 = peg$FAILED;
                                            }
                                        } else {
                                            peg$currPos = s0;
                                            s0 = peg$FAILED;
                                        }
                                    } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                    }
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }
                if (s0 === peg$FAILED) {
                    s0 = peg$currPos;
                    s1 = [];
                    s2 = peg$parseComment();
                    while (s2 !== peg$FAILED) {
                        s1.push(s2);
                        s2 = peg$parseComment();
                    }
                    if (s1 !== peg$FAILED) {
                        s2 = peg$parse_();
                        if (s2 !== peg$FAILED) {
                            s3 = peg$parseMarkerAnnotation();
                            if (s3 === peg$FAILED) {
                                s3 = null;
                            }
                            if (s3 !== peg$FAILED) {
                                s4 = peg$parse_();
                                if (s4 !== peg$FAILED) {
                                    if (input.substr(peg$currPos, 6) === peg$c5) {
                                        s5 = peg$c5;
                                        peg$currPos += 6;
                                    } else {
                                        s5 = peg$FAILED;
                                        if (peg$silentFails === 0) { peg$fail(peg$c6); }
                                    }
                                    if (s5 !== peg$FAILED) {
                                        s6 = peg$parse__();
                                        if (s6 !== peg$FAILED) {
                                            if (input.substr(peg$currPos, 5) === peg$c7) {
                                                s7 = peg$c7;
                                                peg$currPos += 5;
                                            } else {
                                                s7 = peg$FAILED;
                                                if (peg$silentFails === 0) { peg$fail(peg$c8); }
                                            }
                                            if (s7 !== peg$FAILED) {
                                                s8 = peg$parse__();
                                                if (s8 !== peg$FAILED) {
                                                    s9 = peg$parseWord();
                                                    if (s9 !== peg$FAILED) {
                                                        s10 = peg$parseAnyWithoutTerminator();
                                                        if (s10 !== peg$FAILED) {
                                                            if (input.charCodeAt(peg$currPos) === 123) {
                                                                s11 = peg$c9;
                                                                peg$currPos++;
                                                            } else {
                                                                s11 = peg$FAILED;
                                                                if (peg$silentFails === 0) { peg$fail(peg$c10); }
                                                            }
                                                            if (s11 !== peg$FAILED) {
                                                                s12 = [];
                                                                s13 = peg$parseLB();
                                                                while (s13 !== peg$FAILED) {
                                                                    s12.push(s13);
                                                                    s13 = peg$parseLB();
                                                                }
                                                                if (s12 !== peg$FAILED) {
                                                                    peg$savedPos = s0;
                                                                    s1 = peg$c11(s1, s9);
                                                                    s0 = s1;
                                                                } else {
                                                                    peg$currPos = s0;
                                                                    s0 = peg$FAILED;
                                                                }
                                                            } else {
                                                                peg$currPos = s0;
                                                                s0 = peg$FAILED;
                                                            }
                                                        } else {
                                                            peg$currPos = s0;
                                                            s0 = peg$FAILED;
                                                        }
                                                    } else {
                                                        peg$currPos = s0;
                                                        s0 = peg$FAILED;
                                                    }
                                                } else {
                                                    peg$currPos = s0;
                                                    s0 = peg$FAILED;
                                                }
                                            } else {
                                                peg$currPos = s0;
                                                s0 = peg$FAILED;
                                            }
                                        } else {
                                            peg$currPos = s0;
                                            s0 = peg$FAILED;
                                        }
                                    } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                    }
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                    if (s0 === peg$FAILED) {
                        s0 = peg$currPos;
                        s1 = peg$parse_();
                        if (s1 !== peg$FAILED) {
                            if (input.charCodeAt(peg$currPos) === 125) {
                                s2 = peg$c12;
                                peg$currPos++;
                            } else {
                                s2 = peg$FAILED;
                                if (peg$silentFails === 0) { peg$fail(peg$c13); }
                            }
                            if (s2 !== peg$FAILED) {
                                s3 = peg$parse_();
                                if (s3 !== peg$FAILED) {
                                    s4 = [];
                                    s5 = peg$parseLB();
                                    while (s5 !== peg$FAILED) {
                                        s4.push(s5);
                                        s5 = peg$parseLB();
                                    }
                                    if (s4 !== peg$FAILED) {
                                        peg$savedPos = s0;
                                        s1 = peg$c14();
                                        s0 = s1;
                                    } else {
                                        peg$currPos = s0;
                                        s0 = peg$FAILED;
                                    }
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                        if (s0 === peg$FAILED) {
                            s0 = peg$currPos;
                            s1 = peg$parseAnyWithoutLB();
                            if (s1 !== peg$FAILED) {
                                s2 = [];
                                s3 = peg$parseLB();
                                if (s3 !== peg$FAILED) {
                                    while (s3 !== peg$FAILED) {
                                        s2.push(s3);
                                        s3 = peg$parseLB();
                                    }
                                } else {
                                    s2 = peg$FAILED;
                                }
                                if (s2 !== peg$FAILED) {
                                    peg$savedPos = s0;
                                    s1 = peg$c15(s1);
                                    s0 = s1;
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        }
                    }
                }

                return s0;
            }

            function peg$parseTraditionalArray() {
                var s0, s1, s2, s3, s4, s5;

                s0 = peg$currPos;
                if (input.charCodeAt(peg$currPos) === 91) {
                    s1 = peg$c16;
                    peg$currPos++;
                } else {
                    s1 = peg$FAILED;
                    if (peg$silentFails === 0) { peg$fail(peg$c17); }
                }
                if (s1 !== peg$FAILED) {
                    s2 = peg$parse_();
                    if (s2 !== peg$FAILED) {
                        s3 = peg$parseInterger();
                        if (s3 === peg$FAILED) {
                            s3 = null;
                        }
                        if (s3 !== peg$FAILED) {
                            s4 = peg$parse_();
                            if (s4 !== peg$FAILED) {
                                if (input.charCodeAt(peg$currPos) === 93) {
                                    s5 = peg$c18;
                                    peg$currPos++;
                                } else {
                                    s5 = peg$FAILED;
                                    if (peg$silentFails === 0) { peg$fail(peg$c19); }
                                }
                                if (s5 !== peg$FAILED) {
                                    peg$savedPos = s0;
                                    s1 = peg$c20(s3);
                                    s0 = s1;
                                } else {
                                    peg$currPos = s0;
                                    s0 = peg$FAILED;
                                }
                            } else {
                                peg$currPos = s0;
                                s0 = peg$FAILED;
                            }
                        } else {
                            peg$currPos = s0;
                            s0 = peg$FAILED;
                        }
                    } else {
                        peg$currPos = s0;
                        s0 = peg$FAILED;
                    }
                } else {
                    peg$currPos = s0;
                    s0 = peg$FAILED;
                }

                return s0;
            }

            function peg$parseDataType() {
                var s0, s1, s2, s3, s4, s5, s6;
